# libvmod-dynamic

./: .gitignore  .travis.yml  CHANGES.rst  COPYING  INSTALL.rst  LICENSE  Makefile.am  README.rst  autogen.sh  bootstrap  configure.ac  rename-vmod-script  vmod-example.spec  vmod-named.spec
.github/: FUNDING.yml
contrib/vtc/: r81.vtc
debian/: changelog  control  copyright  dirs  rules
m4/: ax_pkg_check_var.m4
pkg/debian/: changelog  control  copyright  dirs  docs
pkg/rpm/: pkg  varnishcache_varnish5.repo  varnishcache_varnish60.repo  varnishcache_varnish63.repo  varnishcache_varnish64.repo  varnishcache_varnish65.repo  varnishcache_varnish66.repo  varnishcache_varnish70.repo  varnishcache_varnish71.repo  varnishcache_varnish72.repo  vmod-dynamic.spec
src/: Makefile.am  compat.h  dyn_getdns.c  dyn_getdns.h  dyn_resolver.h  dyn_resolver_gai.c  dyn_resolver_getdns.c  flint.lnt  flint.sh  vmod_dynamic.c  vmod_dynamic.h  vmod_dynamic.later.vcc  vmod_dynamic.man.rst  vmod_dynamic.vcc  vmod_dynamic_service.c  vmod_example.c  vmod_example.vcc  vmod_named.c  vmod_named.h  vmod_named.vcc  vmod_resolver.c  vmod_resolver.stub.c
src/tbl/: getdns_return.h  list_prop.h
src/tbl/enum/: res_namespace.h  res_redirects.h  res_resolution_type.h  res_transport.h
src/tests/: admin_health.vtc  check-hosts.vtc  hosts  layer.vtc  layer_probe.vtc  layer_reload.vtc  r00107.vtc  stale_obj.vtc  test01.vtc  test02.vtc  test03.vtc  test04.vtc  test05.vtc  test06.vtc  test07.vtc  test08.vtc  test09.vtc  test10.vtc  test11.vtc  test12.vtc  test13.vtc  test14.vtc  via.vtc  via_uds.vtc
src/tests/nogetdns/: resolver_init_error.vtc
src/tests/resolver/: basic.vtc  cfg.vtc  fallback.vtc  test01.vtc
src/tests/service/: basic-stub.vtc  basic.vtc  r51.vtc  r55.vtc
src/vtc/: admin_health.vtc  layer.vtc  layer_probe.vtc  layer_reload.vtc  r00107.vtc  stale_obj.vtc  test01.vtc  test02.vtc  test03.vtc  test04.vtc  test05.vtc  test06.vtc  test07.vtc  test08.vtc  test09.vtc  test10.vtc  test11.vtc  test12.vtc  test13.vtc  test14.vtc  via.vtc  via_uds.vtc
src/vtc/nogetdns/: resolver_init_error.vtc
src/vtc/resolver/: basic.vtc  cfg.vtc  resolver_test01.vtc  test01.vtc
src/vtc/service/: basic-stub.vtc  r51.vtc  service_basic-stub.vtc  service_basic.vtc
